[fix](ABC-1394): Relationship Graph - Fix alignment issue with collapse icon and label (#1003)

--- a/src/modules/base/primitiveRelationshipGraphGroup/primitiveRelationshipGraphGroup.css
+++ b/src/modules/base/primitiveRelationshipGraphGroup/primitiveRelationshipGraphGroup.css
@@ -39,6 +39,10 @@
     font-size: 0.875rem;
 }
 
+.avonni-relationship-graph-group__collapse-icon {
+    height: 100%;
+}
+
 /* Themes --- */
 .avonni-theme_inverse {
     color: #fff;
